<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gdbros_bg"
    android:orientation="vertical"
    tools:context=".ui.AddCustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/twenty"
        android:gravity="left|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_compact_medium"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginStart="@dimen/twenty_five"
            android:layout_marginTop="@dimen/fifteen"
            android:layout_marginEnd="@dimen/twenty_five"
            android:background="@drawable/custom_edit_text_cut"
            android:drawablePadding="@dimen/ten"
            android:fontFamily="@font/sf_compact_regular"
            android:hint="@string/mobile"
            android:inputType="number"
            android:paddingStart="@dimen/ten"
            android:paddingEnd="@dimen/ten" />


        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginStart="@dimen/twenty_five"
            android:layout_marginTop="@dimen/fifteen"
            android:layout_marginEnd="@dimen/twenty_five"
            android:background="@drawable/custom_edit_text_cut"
            android:drawablePadding="@dimen/ten"
            android:fontFamily="@font/sf_compact_regular"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="7"
            android:paddingStart="@dimen/ten"
            android:paddingEnd="@dimen/ten"
            android:visibility="gone" />


        <EditText
            android:id="@+id/et_newPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginStart="@dimen/twenty_five"
            android:layout_marginTop="@dimen/fifteen"
            android:layout_marginEnd="@dimen/twenty_five"
            android:background="@drawable/custom_edit_text_cut"
            android:drawablePadding="@dimen/ten"
            android:fontFamily="@font/sf_compact_regular"
            android:hint="@string/newPassword"
            android:inputType="text"
            android:paddingStart="@dimen/ten"
            android:paddingEnd="@dimen/ten"
            android:visibility="gone" />


        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginStart="@dimen/twenty_five"
            android:layout_marginTop="@dimen/fifteen"
            android:layout_marginEnd="@dimen/twenty_five"
            android:background="@drawable/custom_edit_text_cut"
            android:drawablePadding="@dimen/ten"
            android:fontFamily="@font/sf_compact_regular"
            android:hint="@string/confirmPassword"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/ten"
            android:paddingEnd="@dimen/ten"
            android:visibility="gone" />

        <TextView
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fifteen"
            android:layout_marginTop="@dimen/fifty"
            android:layout_marginEnd="@dimen/fifteen"
            android:background="@drawable/button"
            android:fontFamily="@font/sf_compact_regular"
            android:gravity="center"
            android:nextFocusUp="@+id/tv_register"
            android:padding="@dimen/ten"
            android:textColor="#ffff"
            android:textSize="@dimen/twenty"
            android:text="Send OTP"
             />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"></View>

        <ImageView
            android:id="@+id/logo_id"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo" />
    </LinearLayout>


</RelativeLayout>